--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "bin": {
-    "add-ui": "./scripts/shadcn.mjs"
+    "add-ui": "./scripts/shadcn.mjs",
+    "migrate": "./scripts/migrate.mjs"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
