chore: add script for inngest dev

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "migrate": "./scripts/migrate.mjs",
     "seed": "./scripts/seed.mjs",
     "tables": "./scripts/studio.mjs",
-    "reset-db": "./scripts/resetdb.mjs"
+    "reset-db": "./scripts/resetdb.mjs",
+    "inngest-cli": "./scripts/inngest-dev.mjs"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
@@ -57,6 +58,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "inngest": "^3.40.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.540.0",
     "next": "15.3.4",
