--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.1.5",
     "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "prisma": "^6.14.0",
     "tailwindcss": "^4",
     "tsx": "^4.20.4",
