--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,22 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "include": [
+    "src/**/*",
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist",
+    ".next",
+    "src/generated",
+    "src/generated/**/*",
+    "src/generated/prisma",
+    "src/generated/prisma/**/*",
+    "src/generated/pisma/runtime",
+    "src/generated/prisma/runtime/**/*"
+  ]
 }
