--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build && next start",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint src/app --fix"
   },
@@ -44,6 +44,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
+    "@inngest/agent-kit": "^0.9.0",
     "@opentelemetry/api": "^1.9.0",
     "@prisma/client": "^6.14.0",
     "@radix-ui/react-accordion": "^1.2.12",
