--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,3 +59,16 @@ jobs:
         env:
           NEXT_DISABLE_ESLINT: '1'
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
+
+  docker:
+    runs-on: ubuntu-latest
+
+    steps:
+      # Checkout source code
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      # Build Docker image (just to validate build works)
+      - name: Build Docker image
+        run: |
+          docker build -t nextjs-docker .
