--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "tailwindcss": "^4",
     "tsx": "^4.20.4",
     "tw-animate-css": "^1.3.7",
-    "typescript": "^5"
+    "typescript": "^5",
+    "webpack-cli": "^6.0.1"
   }
 }
