--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "lucide-react": "^0.540.0",
     "next": "15.3.4",
     "next-themes": "^0.4.6",
+    "ngrok": "^5.0.0-beta.2",
     "random-word-slugs": "^0.1.7",
     "react": "^19.0.0",
     "react-day-picker": "^9.9.0",
@@ -131,6 +132,7 @@
     "tsx": "^4.20.4",
     "tw-animate-css": "^1.3.7",
     "typescript": "^5",
-    "webpack-cli": "^6.0.1"
+    "webpack-cli": "^6.0.1",
+    "wrangler": "^4.35.0"
   }
 }
