--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "next": "15.3.4",
     "next-themes": "^0.4.6",
     "ngrok": "^5.0.0-beta.2",
+    "prismjs": "^1.30.0",
     "random-word-slugs": "^0.1.7",
     "react": "^19.0.0",
     "react-day-picker": "^9.9.0",
