--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.32.0",
+    "@clerk/themes": "^2.4.19",
     "@e2b/cli": "^2.0.1",
     "@e2b/code-interpreter": "^2.0.0",
     "@hookform/resolvers": "^5.2.1",
