--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "ngrok": "^5.0.0-beta.2",
     "prismjs": "^1.30.0",
     "random-word-slugs": "^0.1.7",
+    "rate-limiter-flexible": "^7.3.1",
     "react": "^19.0.0",
     "react-day-picker": "^9.9.0",
     "react-dom": "^19.0.0",
