--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint src/app --fix"
+    "lint": "eslint src/app --fix",
+    "postinstall": "prisma generate"
   },
   "husky": {
     "hooks": {
