--- a/package.json
+++ b/package.json
@@ -141,5 +141,8 @@
     "typescript": "^5",
     "webpack-cli": "^6.0.1",
     "wrangler": "^4.35.0"
+  },
+  "optionalDependencies": {
+    "@tailwindcss/oxide-linux-x64-gnu": "latest"
   }
 }
